[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyDARNmusic"
version = "0.1.0"
description = "Multiple Signal Classification (MUSIC) Algorithm for SuperDARN MSTID Detection"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
authors = [
    {name = "Nathaniel A. Frissell", email = "nathaniel.frissell@scranton.edu"},
    {name = "Francis Hassan Tholley"},
]
maintainers = [
    {name = "Nathaniel A. Frissell", email = "nathaniel.frissell@scranton.edu"},
]
keywords = [
    "SuperDARN",
    "MSTID",
    "ionosphere",
    "radar",
    "MUSIC algorithm",
    "signal processing",
    "space weather",
    "atmospheric gravity waves",
    "traveling ionospheric disturbances",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "shapely>=2.0",
    "cartopy",
    "tqdm",
    "aacgmv2",
    "matplotlib",
    "numpy",
    "pydarnio",
    "pydarn",
    "scikit-image",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/w2naf/pyDARNmusic"
Documentation = "https://github.com/w2naf/pyDARNmusic#readme"
Repository = "https://github.com/w2naf/pyDARNmusic.git"
Issues = "https://github.com/w2naf/pyDARNmusic/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyDARNmusic*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.dat"]
